# ClothSimulation

./: CMakeLists.txt  ClothSimulation  README.md  build_and_run.sh  imgui.ini
Headers/: Camera.h  Hash.h  Mesh.h  Model.h  Particle.h  Shader_s.h  Simulator.h
Models/S/: yifu.mtl  yijia.mtl  yijiaS.mtl
Models/lino/: shirt.mtl  wumao1.mtl
Models/maoyi/: YIFU.mtl  YIFU1.mtl  YIJIA.mtl  YIJIA5obj.mtl  YJ.mtl  mote.mtl  nuBIG.mtl  nuSeY.mtl  qiu.mtl  s.mtl  sL.mtl  sanjiaoZ.mtl
Models/yijia/: yijiaS.mtl  未命名.mtl
Shaders/: shader.fs  shader.vs
src/: main.cpp
